Ajouter .history/ au .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ dist-ssr
 .env.production.local
 .env.production
 
+# History files (VS Code)
+.history/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
